[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprite/towerDefense_tile298.png" type="Texture" id=1]
[ext_resource path="res://scripts/Weapon.gd" type="Script" id=2]
[ext_resource path="res://sprite/tilesheet_transparent.png" type="Texture" id=3]
[ext_resource path="res://scenes/Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://audio/pistol.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.05, 0.05 ), Vector2( 0.005, 0.05 ) ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )
Bullet = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 482, 279, 5, 3 )

[node name="EndGun" type="Position2D" parent="."]
position = Vector2( 3, 0 )

[node name="Gundirection" type="Position2D" parent="."]
position = Vector2( 4, 0 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 4, 2.38419e-07 )
rotation = 1.57336
scale = Vector2( 0.005, 0.05 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/muzzle_flash = SubResource( 1 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
